--- a/style.css
+++ b/style.css
@@ -14,13 +14,13 @@ body {
 }
 
 .container p {
-    text-align: center;;
+    text-align: center;
     width: 40%;
     font-size: 18px;
 }
 
 h1 {
-    font-size: 23px;
+    font-size: 21px;
     text-transform: uppercase;
 }
 
