--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,14 @@ body {
 .container {
     width: 50%;
     margin: 0 auto;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    -ms-flex-direction: column;
+        flex-direction: column;
+    -ms-flex-pack: center;
+        justify-content: center;
+    -ms-flex-align: center;
+        align-items: center;
 }
 
 .container p {
