--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,7 @@
+body { font-family: 'Oswald', sans-serif; background: linear-gradient(to right, #02111d, #037bb5, #02111d); }
 
-body {
-    font-family: 'Oswald', sans-serif;
-        background: linear-gradient(to right, #02111d, #037bb5, #02111d);     
-}
+.container { width: 50%; margin: 0 auto; display: -ms-flexbox; display: flex; -ms-flex-direction: column; flex-direction: column; -ms-flex-pack: center; justify-content: center; -ms-flex-align: center; align-items: center; }
 
-.container {
-    width: 50%;
-    margin: 0 auto;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-direction: column;
-        flex-direction: column;
-    -ms-flex-pack: center;
-        justify-content: center;
-    -ms-flex-align: center;
-        align-items: center;
-}
+.container p { text-align: center; width: 40%; font-size: 18px; }
 
-.container p {
-    text-align: center;
-    width: 40%;
-    font-size: 18px;
-}
-
-h1 {
-    font-size: 22px;
-    text-transform: uppercase;
-}
-
+h1 { font-size: 22px; text-transform: uppercase; }
